JAVA-31430 Review add-opens and add-exports in modules - Week 9 - 2024